src/parser.output
Grammar

    0 $accept: specification $end

    1 specification: variable_expression

    2 variable_expression: expression

    3 expression: expression '?' if_action expression ':' else_action expression
    4           | expression OR or_action expression
    5           | expression AND and_action expression
    6           | expression '|' expression
    7           | expression '^' expression
    8           | expression '&' expression
    9           | expression EQUALS expression
   10           | expression NEQUAL expression
   11           | expression '<' expression
   12           | expression '>' expression
   13           | expression LT_EQ expression
   14           | expression GT_EQ expression
   15           | expression LSHIFT expression
   16           | expression RSHIFT expression
   17           | expression '+' expression
   18           | expression '-' expression
   19           | expression '*' expression
   20           | expression '/' expression
   21           | expression '%' expression
   22           | '+' expression
   23           | '-' expression
   24           | '!' expression
   25           | '~' expression
   26           | '(' expression ')'
   27           | DOUBLE
   28           | CONST_PI
   29           | NAME
   30           | function

   31 function: SIN '(' expression ')'
   32         | COS '(' expression ')'
   33         | TAN '(' expression ')'
   34         | ATAN2 '(' expression ',' expression ')'
   35         | ATAN '(' expression ')'
   36         | TANH '(' expression ')'
   37         | SINH '(' expression ')'
   38         | COSH '(' expression ')'
   39         | POW '(' expression ',' expression ')'
   40         | EXP '(' expression ')'
   41         | LOG '(' expression ')'
   42         | LOG10 '(' expression ')'
   43         | SQRT '(' expression ')'
   44         | HYPOT '(' expression ',' expression ')'
   45         | FLOOR '(' expression ')'
   46         | CEIL '(' expression ')'
   47         | FMOD '(' expression ',' expression ')'
   48         | FABS '(' expression ')'

   49 if_action: %empty

   50 else_action: %empty

   51 or_action: %empty

   52 and_action: %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 24
    '%' (37) 21
    '&' (38) 8
    '(' (40) 26 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    ')' (41) 26 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    '*' (42) 19
    '+' (43) 17 22
    ',' (44) 34 39 44 47
    '-' (45) 18 23
    '/' (47) 20
    ':' (58) 3
    '<' (60) 11
    '>' (62) 12
    '?' (63) 3
    '^' (94) 7
    '|' (124) 6
    '~' (126) 25
    error (256)
    OR (258) 4
    AND (259) 5
    EQUALS (260) 9
    NEQUAL (261) 10
    LT_EQ (262) 13
    GT_EQ (263) 14
    LSHIFT (264) 15
    RSHIFT (265) 16
    UNARY (266)
    NAME <s> (267) 29
    DOUBLE <d> (268) 27
    CONST_PI (269) 28
    SIN (270) 31
    COS (271) 32
    TAN (272) 33
    POW (273) 39
    EXP (274) 40
    LOG (275) 41
    LOG10 (276) 42
    SQRT (277) 43
    HYPOT (278) 44
    FLOOR (279) 45
    CEIL (280) 46
    FMOD (281) 47
    FABS (282) 48
    SINH (283) 37
    COSH (284) 38
    TANH (285) 36
    ATAN (286) 35
    ATAN2 (287) 34


Nonterminals, with rules where they appear

    $accept (50)
        on left: 0
    specification (51)
        on left: 1
        on right: 0
    variable_expression (52)
        on left: 2
        on right: 1
    expression <i> (53)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30
        on right: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    function <i> (54)
        on left: 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
        on right: 30
    if_action <i> (55)
        on left: 49
        on right: 3
    else_action <i> (56)
        on left: 50
        on right: 3
    or_action <i> (57)
        on left: 51
        on right: 4
    and_action <i> (58)
        on left: 52
        on right: 5


State 0

    0 $accept: . specification $end

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    specification        go to state 27
    variable_expression  go to state 28
    expression           go to state 29
    function             go to state 30


State 1

   22 expression: '+' . expression

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 31
    function    go to state 30


State 2

   23 expression: '-' . expression

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 32
    function    go to state 30


State 3

   24 expression: '!' . expression

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 33
    function    go to state 30


State 4

   25 expression: '~' . expression

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 34
    function    go to state 30


State 5

   29 expression: NAME .

    $default  reduce using rule 29 (expression)


State 6

   27 expression: DOUBLE .

    $default  reduce using rule 27 (expression)


State 7

   28 expression: CONST_PI .

    $default  reduce using rule 28 (expression)


State 8

   31 function: SIN . '(' expression ')'

    '('  shift, and go to state 35


State 9

   32 function: COS . '(' expression ')'

    '('  shift, and go to state 36


State 10

   33 function: TAN . '(' expression ')'

    '('  shift, and go to state 37


State 11

   39 function: POW . '(' expression ',' expression ')'

    '('  shift, and go to state 38


State 12

   40 function: EXP . '(' expression ')'

    '('  shift, and go to state 39


State 13

   41 function: LOG . '(' expression ')'

    '('  shift, and go to state 40


State 14

   42 function: LOG10 . '(' expression ')'

    '('  shift, and go to state 41


State 15

   43 function: SQRT . '(' expression ')'

    '('  shift, and go to state 42


State 16

   44 function: HYPOT . '(' expression ',' expression ')'

    '('  shift, and go to state 43


State 17

   45 function: FLOOR . '(' expression ')'

    '('  shift, and go to state 44


State 18

   46 function: CEIL . '(' expression ')'

    '('  shift, and go to state 45


State 19

   47 function: FMOD . '(' expression ',' expression ')'

    '('  shift, and go to state 46


State 20

   48 function: FABS . '(' expression ')'

    '('  shift, and go to state 47


State 21

   37 function: SINH . '(' expression ')'

    '('  shift, and go to state 48


State 22

   38 function: COSH . '(' expression ')'

    '('  shift, and go to state 49


State 23

   36 function: TANH . '(' expression ')'

    '('  shift, and go to state 50


State 24

   35 function: ATAN . '(' expression ')'

    '('  shift, and go to state 51


State 25

   34 function: ATAN2 . '(' expression ',' expression ')'

    '('  shift, and go to state 52


State 26

   26 expression: '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 53
    function    go to state 30


State 27

    0 $accept: specification . $end

    $end  shift, and go to state 54


State 28

    1 specification: variable_expression .

    $default  reduce using rule 1 (specification)


State 29

    2 variable_expression: expression .
    3 expression: expression . '?' if_action expression ':' else_action expression
    4           | expression . OR or_action expression
    5           | expression . AND and_action expression
    6           | expression . '|' expression
    7           | expression . '^' expression
    8           | expression . '&' expression
    9           | expression . EQUALS expression
   10           | expression . NEQUAL expression
   11           | expression . '<' expression
   12           | expression . '>' expression
   13           | expression . LT_EQ expression
   14           | expression . GT_EQ expression
   15           | expression . LSHIFT expression
   16           | expression . RSHIFT expression
   17           | expression . '+' expression
   18           | expression . '-' expression
   19           | expression . '*' expression
   20           | expression . '/' expression
   21           | expression . '%' expression

    '?'     shift, and go to state 55
    OR      shift, and go to state 56
    AND     shift, and go to state 57
    '|'     shift, and go to state 58
    '^'     shift, and go to state 59
    '&'     shift, and go to state 60
    EQUALS  shift, and go to state 61
    NEQUAL  shift, and go to state 62
    '<'     shift, and go to state 63
    '>'     shift, and go to state 64
    LT_EQ   shift, and go to state 65
    GT_EQ   shift, and go to state 66
    LSHIFT  shift, and go to state 67
    RSHIFT  shift, and go to state 68
    '+'     shift, and go to state 69
    '-'     shift, and go to state 70
    '*'     shift, and go to state 71
    '/'     shift, and go to state 72
    '%'     shift, and go to state 73

    $default  reduce using rule 2 (variable_expression)


State 30

   30 expression: function .

    $default  reduce using rule 30 (expression)


State 31

    3 expression: expression . '?' if_action expression ':' else_action expression
    4           | expression . OR or_action expression
    5           | expression . AND and_action expression
    6           | expression . '|' expression
    7           | expression . '^' expression
    8           | expression . '&' expression
    9           | expression . EQUALS expression
   10           | expression . NEQUAL expression
   11           | expression . '<' expression
   12           | expression . '>' expression
   13           | expression . LT_EQ expression
   14           | expression . GT_EQ expression
   15           | expression . LSHIFT expression
   16           | expression . RSHIFT expression
   17           | expression . '+' expression
   18           | expression . '-' expression
   19           | expression . '*' expression
   20           | expression . '/' expression
   21           | expression . '%' expression
   22           | '+' expression .

    $default  reduce using rule 22 (expression)


State 32

    3 expression: expression . '?' if_action expression ':' else_action expression
    4           | expression . OR or_action expression
    5           | expression . AND and_action expression
    6           | expression . '|' expression
    7           | expression . '^' expression
    8           | expression . '&' expression
    9           | expression . EQUALS expression
   10           | expression . NEQUAL expression
   11           | expression . '<' expression
   12           | expression . '>' expression
   13           | expression . LT_EQ expression
   14           | expression . GT_EQ expression
   15           | expression . LSHIFT expression
   16           | expression . RSHIFT expression
   17           | expression . '+' expression
   18           | expression . '-' expression
   19           | expression . '*' expression
   20           | expression . '/' expression
   21           | expression . '%' expression
   23           | '-' expression .

    $default  reduce using rule 23 (expression)


State 33

    3 expression: expression . '?' if_action expression ':' else_action expression
    4           | expression . OR or_action expression
    5           | expression . AND and_action expression
    6           | expression . '|' expression
    7           | expression . '^' expression
    8           | expression . '&' expression
    9           | expression . EQUALS expression
   10           | expression . NEQUAL expression
   11           | expression . '<' expression
   12           | expression . '>' expression
   13           | expression . LT_EQ expression
   14           | expression . GT_EQ expression
   15           | expression . LSHIFT expression
   16           | expression . RSHIFT expression
   17           | expression . '+' expression
   18           | expression . '-' expression
   19           | expression . '*' expression
   20           | expression . '/' expression
   21           | expression . '%' expression
   24           | '!' expression .

    $default  reduce using rule 24 (expression)


State 34

    3 expression: expression . '?' if_action expression ':' else_action expression
    4           | expression . OR or_action expression
    5           | expression . AND and_action expression
    6           | expression . '|' expression
    7           | expression . '^' expression
    8           | expression . '&' expression
    9           | expression . EQUALS expression
   10           | expression . NEQUAL expression
   11           | expression . '<' expression
   12           | expression . '>' expression
   13           | expression . LT_EQ expression
   14           | expression . GT_EQ expression
   15           | expression . LSHIFT expression
   16           | expression . RSHIFT expression
   17           | expression . '+' expression
   18           | expression . '-' expression
   19           | expression . '*' expression
   20           | expression . '/' expression
   21           | expression . '%' expression
   25           | '~' expression .

    $default  reduce using rule 25 (expression)


State 35

   31 function: SIN '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 74
    function    go to state 30


State 36

   32 function: COS '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 75
    function    go to state 30


State 37

   33 function: TAN '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 76
    function    go to state 30


State 38

   39 function: POW '(' . expression ',' expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 77
    function    go to state 30


State 39

   40 function: EXP '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 78
    function    go to state 30


State 40

   41 function: LOG '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 79
    function    go to state 30


State 41

   42 function: LOG10 '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 80
    function    go to state 30


State 42

   43 function: SQRT '(' . expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 81
    function    go to state 30


State 43

   44 function: HYPOT '(' . expression ',' expression ')'

    '+'       shift, and go to state 1
    '-'       shift, and go to state 2
    '!'       shift, and go to state 3
    '~'       shift, and go to state 4
    NAME      shift, and go to state 5
    DOUBLE    shift, and go to state 6
    CONST_PI  shift, and go to state 7
    SIN       shift, and go to state 8
    COS       shift, and go to state 9
    TAN       shift, and go to state 10
    POW       shift, and go to state 11
    EXP       shift, and go to state 12
    LOG       shift, and go to state 13
    LOG10     shift, and go to state 14
    SQRT      shift, and go to state 15
    HYPOT     shift, and go to state 16
    FLOOR     shift, and go to state 17
    CEIL      shift, and go to state 18
    FMOD      shift, and go to state 19
    FABS      shift, and go to state 20
    SINH      shift, and go to state 21
    COSH      shift, and go to state 22
    TANH      shift, and go to state 23
    ATAN      shift, and go to state 24
    ATAN2     shift, and go to state 25
    '('       shift, and go to state 26

    expression  go to state 82
    function    go to state 30


State 44

   45 function: FLOOR '(' . expression ')'
